# ferro-db

./: Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  changes.fdbz  data.fdbz  db.json  test.sh
src/: ferrodb.rs  lib.rs  main.rs  server.rs  shell.rs
