[package]
name = "ferrodb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustyline = "8.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
flate2 = "1.0"
actix-web = "4.0"
clap = "3.1.6"

[[bin]]
name = "ferrodb"
path = "src/main.rs"